--- a/app/src/main/res/layout/roster_player_card_grid_medium.xml
+++ b/app/src/main/res/layout/roster_player_card_grid_medium.xml
@@ -11,6 +11,8 @@
     android:layout_marginTop="3dp"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="3dp"
+    android:minWidth="150dp"
+    android:minHeight="50dp"
     app:cardBackgroundColor="#FFFFFF"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
@@ -19,8 +21,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardPlayerConstraintLayout"
-        android:layout_width="200dp"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/cardPlayerMediumGridImgProfile"
@@ -56,29 +58,27 @@
 
         <TextView
             android:id="@+id/cardPlayerMediumGridTxtOne"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="85dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_marginTop="2dp"
-            android:layout_marginEnd="1dp"
+            android:layout_marginEnd="3dp"
             android:autoSizeMaxTextSize="16sp"
             android:autoSizeMinTextSize="8sp"
-            android:lines="2"
-            android:text="Text One"
+            android:lines="1"
+            android:text="Sub Text One"
             android:textSize="14sp"
             android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/cardPlayerMediumGridChkSelected"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/cardPlayerMediumGridImgProfile"
-            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridTxtName"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridTxtName" />
 
         <CheckBox
             android:id="@+id/cardPlayerMediumGridChkSelected"
             android:layout_width="50dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="4dp"
             android:button="@android:drawable/btn_star_big_on"
             android:checked="true"
             android:hapticFeedbackEnabled="true"
@@ -86,21 +86,66 @@
             android:textColor="#000000"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridTxtName" />
+            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridTxtName"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/cardPlayerSelectedTxtView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
             android:autoSizeMaxTextSize="18sp"
             android:autoSizeMinTextSize="8sp"
             android:text="Selected"
+            android:textAlignment="center"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/cardPlayerMediumGridBtnNotes"
             app:layout_constraintEnd_toEndOf="@+id/cardPlayerMediumGridChkSelected"
             app:layout_constraintStart_toStartOf="@+id/cardPlayerMediumGridChkSelected"
             app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridChkSelected"
-            app:layout_constraintVertical_bias="0.0" />
+            tools:visibility="visible" />
+
+        <ImageButton
+            android:id="@+id/cardPlayerMediumGridBtnNotes"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginEnd="4dp"
+            android:backgroundTint="#00FFFFFF"
+            android:scaleType="center"
+            android:tint="@color/ludiBlue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridTextViewTwo"
+            app:srcCompat="@android:drawable/ic_menu_edit" />
+
+        <TextView
+            android:id="@+id/cardPlayerMediumGridOrderIndex"
+            android:layout_width="0dp"
+            android:layout_height="19dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="1dp"
+            android:text="1"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/cardPlayerMediumGridBtnNotes"
+            app:layout_constraintEnd_toEndOf="@+id/cardPlayerMediumGridImgProfile"
+            app:layout_constraintHorizontal_bias="0.47"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridImgProfile" />
+
+        <TextView
+            android:id="@+id/cardPlayerMediumGridTextViewTwo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="3dp"
+            android:maxLines="2"
+            android:text="Sub Text Two"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@+id/cardPlayerMediumGridChkSelected"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/cardPlayerMediumGridTxtOne"
+            app:layout_constraintTop_toBottomOf="@+id/cardPlayerMediumGridTxtOne" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
