--- a/app/src/main/res/layout/roster_player_card_grid_medium.xml
+++ b/app/src/main/res/layout/roster_player_card_grid_medium.xml
@@ -135,9 +135,9 @@
 
         <TextView
             android:id="@+id/cardPlayerMediumGridTextViewTwo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="3dp"
             android:maxLines="2"
             android:text="Sub Text Two"
