--- a/app/src/main/res/layout-port/formation_builder_fragment_portrait.xml
+++ b/app/src/main/res/layout-port/formation_builder_fragment_portrait.xml
@@ -10,7 +10,6 @@
     tools:ignore="MissingDefaultResource">
 
 
-
     <!-- The Soccer Field -->
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/soccerfield"
@@ -48,10 +47,17 @@
             app:maxImageSize="45dp"
             app:rippleColor="@color/transparent" />
 
-
     </RelativeLayout>
 
     <!-- The Roster List -->
+
+    <TextView
+        android:id="@+id/formationBuilderUserHelpTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Swipe Right/Left for Roster Builder"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/formationBuilderRosterTypeLinearLayout"/>
 
     <LinearLayout
         android:id="@+id/formationBuilderRosterTypeLinearLayout"
