--- a/app/src/main/res/navigation/navigation_location_manager.xml
+++ b/app/src/main/res/navigation/navigation_location_manager.xml
@@ -17,7 +17,7 @@
         tools:layout="@layout/spot_calendar_fragment" />
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="io.usys.report.ui.ludi.DashboardHomeFragment"
+        android:name="io.usys.report.ui.ludi.dashboard.DashboardHomeFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/ludi_dashboard_fragment" />
     <fragment
