--- a/app/src/main/res/layout/ludi_chat.xml
+++ b/app/src/main/res/layout/ludi_chat.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -15,13 +16,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:background="@drawable/ft_border_rounded_creme"
         android:clipToPadding="false"
         android:overScrollMode="never"
         android:padding="16dp"
         android:scrollbarStyle="outsideInset"
         android:scrollbars="vertical" />
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
@@ -30,21 +32,32 @@
             android:id="@+id/chat_edit_text"
             android:layout_width="270dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/ft_border_rounded_creme"
             android:hint="Type a message..."
             android:inputType="textMultiLine"
             android:maxLines="3"
             android:padding="12dp"
-            android:textSize="16sp" />
+            android:textColor="@color/ludiBlue"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/chat_send_button"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="bottom"
-            android:layout_marginRight="36dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
             android:text="SEND"
-            android:textSize="16sp" />
-    </RelativeLayout>
+            android:textColor="@color/ludiBlue"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/chat_edit_text"
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="@color/ludiBlue"
+            app:strokeWidth="1dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
