--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -113,4 +113,10 @@
         <item name="android:background">@color/ysrFadedWhite</item>
     </style>
     <style name="YSR.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="TransparentDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
 </resources>
