--- a/app/src/main/res/layout/ludi_chat.xml
+++ b/app/src/main/res/layout/ludi_chat.xml
@@ -45,15 +45,17 @@
 
         <Button
             android:id="@+id/chat_send_button"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
+            android:maxWidth="100dp"
             android:text="SEND"
             android:textColor="@color/ludiBlue"
-            android:textSize="16sp"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.695"
             app:layout_constraintStart_toEndOf="@+id/chat_edit_text"
             app:layout_constraintTop_toTopOf="parent"
             app:strokeColor="@color/ludiBlue"
