--- a/app/src/main/res/layout/ludi_view_group.xml
+++ b/app/src/main/res/layout/ludi_view_group.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<io.usys.report.ui.views.LudiConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<io.usys.report.ui.views.LudiConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ludiConstraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/ysrWindowBackground">
 
     <io.usys.report.ui.views.LudiTabLayout
         android:id="@+id/ludiTabLayout"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:background="@color/ysrWindowBackground"
         android:minHeight="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tabMode="fixed"
-        app:tabTextColor="#3F51B5" />
+        app:tabTextColor="@color/ludiBlue" />
 
     <io.usys.report.ui.views.LudiLinearLayout
         android:id="@+id/ludiViewPagerLinearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/ysrWindowBackground"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
