--- a/app/src/main/res/layout/team_header_card_large.xml
+++ b/app/src/main/res/layout/team_header_card_large.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardOrgRootLayout"
@@ -8,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:orientation="vertical"
-    app:cardBackgroundColor="@color/white">
+    app:cardBackgroundColor="@color/ysrWindowBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardTeamMediumMainLayout"
