--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,18 @@
 <!-- Created by ChazzCoin : October 2022 -->
 
 <resources>
-    <color name="ysrWindowBackground">#F6F6F5</color>
-<!--    <color name="ysrWindowBackground">#003366</color>-->
+<!--    <color name="ysrWindowBackground">#F6F6F5</color>-->
+<!--    <color name="ysrWindowBackground">#effbfa</color>-->
+    <color name="ysrWindowBackground">#FFFCF9</color>
 
+    <color name="vintageBlue">#80A1C2</color>
+    <color name="vintageRed">#BF4146</color>
+
+<!--    <color name="ludiBlue">#80A1C2</color>-->
     <color name="ludiBlue">#003366</color>
     <color name="ludiBlack">@color/black</color>
     <color name="ludiWhite">#F6F6F5</color>
+    <color name="ludiGreen">#effbfa</color>
 
     <color name="ysrBlue">#769FCA</color>
     <color name="ysrRed">#FF6C65</color>
